[package]
name = "calendar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
gtk = { version = "0.6.1", package = "gtk4", features = ["v4_6"] }
icalendar = "0.15.4"
reqwest = "0.11.14"

[lib]
path = "src/main.rs"
crate-type = ["cdylib"]